# OrchidTracker

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  README.md  build.rs  index.html  orchid-tracker-14de3cbca6fa6d5f_bg.wasm  orchid-tracker-1a793ce25dc5a943_bg.wasm  orchid-tracker-1e3ae1843969b508_bg.wasm  orchid-tracker-2363c680c7e15742.js  orchid-tracker-2363c680c7e15742_bg.wasm  orchid-tracker-26f56b0e38d781e3_bg.wasm  orchid-tracker-27912e0f11bdf4a7_bg.wasm  orchid-tracker-284d8b8315d4957f_bg.wasm  orchid-tracker-2ab5ec97c94e3d2e.js  orchid-tracker-2ab5ec97c94e3d2e_bg.wasm  orchid-tracker-2c635d9fd51d903d.js  orchid-tracker-2c635d9fd51d903d_bg.wasm  orchid-tracker-30f811b256e41fb5_bg.wasm  orchid-tracker-37fdf69222177c6a_bg.wasm  orchid-tracker-3ac5d8ca0632f4a0_bg.wasm  orchid-tracker-3b48d53610cffbd8_bg.wasm  orchid-tracker-428f4805d81a6782.js  orchid-tracker-428f4805d81a6782_bg.wasm  orchid-tracker-5588346593cad72f.js  orchid-tracker-5588346593cad72f_bg.wasm  orchid-tracker-566975f888da7594_bg.wasm  orchid-tracker-81316214d6a03d0b.js  orchid-tracker-81316214d6a03d0b_bg.wasm  orchid-tracker-81c3fcc276883097.js  orchid-tracker-81c3fcc276883097_bg.wasm  orchid-tracker-9366a3b6ece8b450.js  orchid-tracker-9366a3b6ece8b450_bg.wasm  orchid-tracker-95b597b64790a815_bg.wasm  orchid-tracker-a3c8502b1a7bc978_bg.wasm  orchid-tracker-ae5c13a993fd3e0d_bg.wasm  (+28 more)
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.github/workflows/: add-species.yml  fetch-climate.yml  gh-pages.yml  release.yml
deploy/: deploy.sh  orchid-tracker.service  setup.sh
end2end/: package-lock.json  package.json  playwright.config.ts
end2end/tests/: hydration.spec.ts
migrations/: 0001_initial_schema.surql  0002_growing_zones.surql  0003_climate_readings.surql  0004_sessions.surql  0005_habitat_weather.surql  0006_watering_and_alerts.surql  0007_user_preferences.surql  0008_log_entry_event_type.surql  0009_care_tracking_fields.surql  0010_seasonal_care.surql  0011_climate_reading_source.surql  0012_hardware_devices.surql  0013_public_collection.surql  0014_precipitation.surql  0015_par_ppfd.surql  0016_pot_type.surql  0017_normalize_pot_enums.surql
public/: sw.js
scripts/: add_species.js  fetch_climate.js
src/: app.rs  auth.rs  cli.rs  config.rs  crypto.rs  db.rs  error.rs  estimation.rs  github.rs  lib.rs  main.rs  merge.rs  model.rs  orchid.rs  push.rs  session_store.rs  test_helpers.rs  update.rs  watering.rs
src/climate/: ac_infinity.rs  alerts.rs  habitat_poller.rs  mod.rs  open_meteo.rs  poller.rs  seasonal_alerts.rs  tempest.rs
src/components/: add_orchid_form.rs  app_header.rs  botanical_art.rs  cabinet_table.rs  climate_dashboard.rs  climate_strip.rs  cookie_consent.rs  device_management.rs  event_type_picker.rs  event_types.rs  first_bloom.rs  global_footer.rs  growth_thread.rs  habitat_weather.rs  manual_reading.rs  mod.rs  notification_setup.rs  orchid_card.rs  orchid_collection.rs  orchid_detail.rs  photo_capture.rs  photo_gallery.rs  quick_actions.rs  scanner.rs  seasonal_calendar.rs  settings.rs  suitability_card.rs  today_tasks.rs  zone_wizard.rs
src/data/: climate.json  orchids.json
src/pages/: account_delete.rs  cookie_policy.rs  home.rs  login.rs  mod.rs  onboarding.rs  public_collection.rs  register.rs  terms_of_service.rs
src/server_fns/: alerts.rs  auth.rs  climate.rs  devices.rs  images.rs  mod.rs  orchids.rs  preferences.rs  public.rs  scanner.rs  telemetry.rs  zones.rs
tests/: test_estimation_math.rs  test_growth_journal.rs  test_model.rs  test_preferences.rs  test_public_collection.rs  test_push_subscription.rs  test_scanner.rs
