[package]
name = "orchid-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Event", "HtmlVideoElement", "HtmlCanvasElement", "MediaStream", "MediaStreamConstraints", "MediaDevices", "Navigator", "Window", "CanvasRenderingContext2d", "Element"] }
js-sys = "0.3"
chrono = { version = "0.4.43", features = ["serde", "wasm-bindgen"] }
rexie = "0.6.2"
gloo-file = { version = "0.3.0", features = ["futures"] }
serde-wasm-bindgen = "0.6.5"
reqwest = { version = "0.13.2", features = ["json"] }
base64 = "0.22.1"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
