[package]
name = "orchid-tracker"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared (both targets)
leptos = "0.8"
leptos_router = "0.8"
leptos_meta = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "2"

# Server-only
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"], optional = true }
leptos_axum = { version = "0.8", optional = true }
surrealdb = { version = "3", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "limit", "trace", "set-header"], optional = true }
tower-sessions = { version = "0.14", optional = true }
argon2 = { version = "0.5", optional = true }
reqwest = { version = "0.12", features = ["json", "multipart"], optional = true }
dotenvy = { version = "0.15", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
time = { version = "0.3", optional = true }
governor = { version = "0.8", optional = true }
tower_governor = { version = "0.6", optional = true }

# Client-only
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "HtmlInputElement", "HtmlSelectElement", "Event",
    "HtmlVideoElement", "HtmlCanvasElement",
    "MediaStream", "MediaStreamConstraints", "MediaDevices",
    "Navigator", "Window", "CanvasRenderingContext2d",
    "Element", "DragEvent", "DataTransfer",
    "MediaStreamTrack", "Clipboard", "console",
    "UrlSearchParams", "Blob", "Url", "File", "FileList",
    "HtmlElement",
], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-file = { version = "0.3", features = ["futures"], optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook", "dep:wasm-bindgen", "dep:wasm-bindgen-futures",
    "dep:web-sys", "dep:js-sys", "dep:gloo-timers", "dep:gloo-file",
]
ssr = [
    "leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr",
    "dep:axum", "dep:tokio", "dep:leptos_axum", "dep:surrealdb",
    "dep:tower", "dep:tower-http", "dep:tower-sessions",
    "dep:argon2", "dep:reqwest", "dep:dotenvy",
    "dep:tracing", "dep:tracing-subscriber", "dep:uuid",
    "dep:time", "dep:governor", "dep:tower_governor",
]

[package.metadata.leptos]
output-name = "orchid-tracker"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "tailwind.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
