[package]
name = "orchid-tracker"
version = "0.9.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared (both targets)
leptos = "0.8"
leptos_router = "0.8"
leptos_meta = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
thiserror = "2"
tracing = "0.1"

# Server-only
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"], optional = true }
leptos_axum = { version = "0.8", optional = true }
surrealdb = { version = "3", optional = true, features = ["kv-mem"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "limit", "trace", "set-header"], optional = true }
tower-sessions = { version = "0.15", optional = true }
argon2 = { version = "0.5", optional = true }
reqwest = { version = "0.13", features = ["json", "multipart"], optional = true }
dotenvy = { version = "0.15", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
time = { version = "0.3", optional = true }
governor = { version = "0.10", optional = true }
tower_governor = { version = "0.8", default-features = false, features = ["axum", "tracing"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
async-trait = { version = "0.1", optional = true }
aes-gcm = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
web-push = { version = "0.11", optional = true }
tracing-axiom = { version = "0.7.0", optional = true }

# Client-only
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "HtmlInputElement", "HtmlImageElement", "HtmlSelectElement", "Event",
    "HtmlVideoElement", "HtmlCanvasElement",
    "MediaStream", "MediaStreamConstraints", "MediaDevices",
    "Navigator", "Window", "CanvasRenderingContext2d",
    "Element", "DragEvent", "DataTransfer",
    "MediaStreamTrack", "Clipboard", "console",
    "UrlSearchParams", "Blob", "Url", "File", "FileList",
    "HtmlElement",
    "Notification", "NotificationPermission", "NotificationOptions",
    "ServiceWorkerContainer", "ServiceWorkerRegistration",
    "PushManager", "PushSubscription", "PushSubscriptionOptionsInit",
    "PushSubscriptionJson",
    "FormData", "Headers", "Request", "RequestInit", "Response",
], optional = true }
js-sys = { version = "0.3", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
gloo-file = { version = "0.3", features = ["futures"], optional = true }
leptos_config = "0.8.9"
tracing-wasm = { version = "0.2.1", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook", "dep:wasm-bindgen", "dep:wasm-bindgen-futures",
    "dep:web-sys", "dep:js-sys", "dep:gloo-timers", "dep:gloo-file",
    "dep:tracing-wasm"
]
ssr = [
    "leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr",
    "dep:axum", "dep:tokio", "dep:leptos_axum", "dep:surrealdb",
    "dep:tower", "dep:tower-http", "dep:tower-sessions",
    "dep:argon2", "dep:reqwest", "dep:dotenvy",
    "dep:tracing-subscriber", "dep:uuid",
    "dep:time", "dep:governor", "dep:tower_governor",
    "dep:clap",
    "dep:async-trait",
    "dep:aes-gcm", "dep:sha2", "dep:base64",
    "dep:web-push", "dep:tracing-axiom",
]
tracing-wasm = ["dep:tracing-wasm"]

[dev-dependencies]
surrealdb = { version = "3", features = ["kv-mem"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.leptos]
output-name = "orchid-tracker"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "tailwind.css"
assets-dir = "public"
site-addr = "0.0.0.0:3000"
reload-port = 3001
bin-features = ["ssr"]
lib-features = ["hydrate"]
hash-files = true
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "z"
